Add TPM 2.0 update link to Technical section
Added a new link for updating TPM 2.0 for Windows 11 in the Technical section.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ h2{
     <a href="https://umeraio.github.io/assessor/">Certified Assessor Training Gateway</a>
     <a href="https://umeraio.github.io/pc-boot-process/index.html">The Anatomy of a PC Boot Cycle</a>
     <a href="https://umeraio.github.io/srx-commands/">Essential SRX Command Mastery</a>
+    <a href="https://umeraio.github.io/win11-tpm-update/">How to Update TPM 2.0 for Win 11</a>
   </div>
 
   <div class="column">
