Add new technical link for GitHub website creation
Added a new technical link for website creation and publishing.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 body{
   margin:0;
   font-family:'Segoe UI',sans-serif;
- background:linear-gradient(120deg,#f0f7ff 0%,#ffffff 50%,#fff8e1 100%);
+  background:linear-gradient(120deg,#f0f7ff 0%,#ffffff 50%,#fff8e1 100%);
   color:#222;
 }
 header{
- background:linear-gradient(90deg,#0078D7,#005fa3);
+  background:linear-gradient(90deg,#0078D7,#005fa3);
   color:#fff;
   text-align:center;
   padding:35px 0;
@@ -25,14 +25,14 @@ header{
   max-width:1200px;
   margin:50px auto;
   display:flex;
- justify-content:space-around;
+  justify-content:space-around;
   flex-wrap:wrap;
   gap:30px;
 }
 .column{
   flex:1 1 350px;
   display:flex;
- flex-direction:column;
+  flex-direction:column;
   align-items:center;
   gap:20px;
 }
@@ -40,7 +40,7 @@ a{
   display:block;
   width:85%;
   text-align:center;
- text-decoration:none;
+  text-decoration:none;
   background:#fff;
   border-left:8px solid #FFD700;
   color:#222;
@@ -52,7 +52,7 @@ a{
   transition:all .3s ease;
 }
 a:hover{
- transform:translateY(-5px);
+  transform:translateY(-5px);
   background:#f9fbff;
   box-shadow:0 12px 25px rgba(0,0,0,0.25);
 }
@@ -73,17 +73,17 @@ h2{
 </style>
 </head>
 <body>
- 
+
 <header>🌐 Learn, Practice & Grow</header>
- 
+
 <div class="container">
- 
+
   <div class="column">
     <h2>🍳 Recipes</h2>
     <a href="https://umeraio.github.io/donner/">The Ultimate Donner Wrap Secret</a>
     <a href="https://umeraio.github.io/soup/">Authentic Desi Yakhni Soup Recipe</a>
   </div>
- 
+
   <div class="column">
     <h2>💻 Technical</h2>
     <a href="https://umeraio.github.io/assessor/">Certified Assessor Training Gateway</a>
@@ -91,18 +91,19 @@ h2{
     <a href="https://umeraio.github.io/srx-commands/">Essential SRX Command Mastery</a>
     <a href="https://umeraio.github.io/win11-tpm-update/">How to Update TPM 2.0 for Win 11</a>
     <a href="https://umeraio.github.io/github-html-files-update-/">Github HTML File-Update</a>
+    <a href="https://umeraio.github.io/Creating-Publishing-website-GitHub-/">Creation, Publishing, Renaming & Deletion- Github</a>
   </div>
- 
+
   <div class="column">
     <h2>🌙 Ramzan</h2>
     <a href="https://umeraio.github.io/ramzan/">UK Ramzan Timetable 2026</a>
   </div>
- 
+
 </div>
- 
+
 <footer>
 Crafted Through Research by Umer Malik
 </footer>
- 
+
 </body>
 </html>
